@@ -2,6 +2,7 @@ Overview of changes in lightdm 0.9.2
 
     * Fix annotation and Vala bindings for getting the UserList singleton
     * Fix GTK+ greeter error label not being shown
+    * Don't set SIGQUIT to ignore in child processes
 
 Overview of changes in lightdm 0.9.1
 
